syntax = "proto3";
package sample;

message Sample {
  message Base {
    string str = 1;
    int32 int32 = 2;
    int64 int64 = 3;
    uint32 uint32 = 4;
    uint64 uint64 = 5;
    sint32 sint32 = 6;
    sint64 sint64 = 7;
    fixed32 fixed32 = 8;
    fixed64 fixed64 = 9;
    sfixed32 sfixed32 = 10;
    sfixed64 sfixed64 = 11;
    double double = 12;
    bool bool = 13;
    bytes bytes = 14;
  }

  message Repeated {
    repeated string str = 1;
    repeated int32 int32 = 2;
    repeated int64 int64 = 3;
    repeated uint32 uint32 = 4;
    repeated uint64 uint64 = 5;
    repeated sint32 sint32 = 6;
    repeated sint64 sint64 = 7;
    repeated fixed32 fixed32 = 8;
    repeated fixed64 fixed64 = 9;
    repeated sfixed32 sfixed32 = 10;
    repeated sfixed64 sfixed64 = 11;
    repeated double double = 12;
    repeated bool bool = 13;
    repeated bytes bytes = 14;   
    repeated Base bases = 15;
  }
}

service EchoBase {
  rpc EchoBase(Sample.Base) returns (Sample.Base);
}

service EchoRepeated {
  rpc EchoRepeated(Sample.Repeated) returns (Sample.Repeated);
}